复选框描述读配置文件

--- a/ANDOperationForBase/ANDOperationForBase.csproj
+++ b/ANDOperationForBase/ANDOperationForBase.csproj
@@ -36,6 +36,9 @@
     <ApplicationIcon>1&amp;.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Gaiokane">
+      <HintPath>..\..\..\dll\Gaiokane.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -69,6 +72,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="ANDOperationForBase.exe.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
